Documentation/grammar_rules.txt
MINILANG CONTEXT-FREE GRAMMAR RULES
===================================

Project Title:
MiniLang: Automata-Based Compiler Front-End

Topic:
F2 - Automata in Compiler Design


1. PURPOSE OF THE GRAMMAR
-------------------------

The MiniLang grammar defines the valid structure of programs written in the MiniLang language.

The grammar is used by the syntax analyzer/parser to check whether the token stream generated by the lexical analyzer follows correct programming language syntax.


2. START SYMBOL
---------------

Program


3. TERMINALS
------------

The terminals are the actual symbols/tokens that appear in MiniLang programs.

Terminals:

int
if
print
id
number
=
+
-
*
/
>
<
;
(
)
{
}


4. NON-TERMINALS
----------------

The non-terminals are grammar variables used to define the structure of the language.

Non-terminals:

Program
StatementList
Statement
Declaration
Assignment
PrintStatement
IfStatement
Condition
Expression
RelOp
ArithOp


5. PRODUCTION RULES
-------------------

Program → StatementList

StatementList → Statement StatementList | ε

Statement → Declaration
          | Assignment
          | PrintStatement
          | IfStatement

Declaration → int id = number ;

Assignment → id = Expression ;

PrintStatement → print ( id ) ;

IfStatement → if Condition { StatementList }

Condition → id RelOp number

Expression → id
           | number
           | id ArithOp number
           | number ArithOp number
           | id ArithOp id
           | number ArithOp id

RelOp → > | <

ArithOp → + | - | * | /


6. VALID MINILANG PROGRAM EXAMPLES
----------------------------------

Example 1:

int x = 10;
print(x);


Example 2:

int marks = 85;
if marks > 50 {
    print(marks);
}


Example 3:

int x = 10;
x = x + 5;
print(x);


7. INVALID MINILANG PROGRAM EXAMPLES
------------------------------------

Example 1:

int x = 10
print(x);

Reason:
The declaration statement is missing a semicolon.


Example 2:

int 123 = 10;

Reason:
The variable name is invalid because an identifier cannot start with a digit.


Example 3:

print x;

Reason:
The print statement must use parentheses.


Example 4:

if x > 5
    print(x);

Reason:
The if statement is missing opening and closing braces.


8. ROLE OF CFG IN THE PROJECT
-----------------------------

The Context-Free Grammar is used during syntax analysis.

The lexer first converts the source code into tokens. Then the parser checks whether these tokens follow the grammar rules of MiniLang.

This shows how Context-Free Grammars can be used in compiler design for validating the syntax of programming languages.
